@@ -2,12 +2,10 @@
 set -x
 set -e
 
-# Needed because Ubuntu 24.04 doesn't have java 23+
-add-apt-repository ppa:openjdk-r/ppa 
 # Dependencies
 apt-get update
 apt-get upgrade
-apt-get -y install openjdk-23-jre-headless ufw caddy
+apt-get -y install openjdk-25-jre-headless ufw
 
 # App user (you cannot login as this user)
 useradd -rms /usr/sbin/nologin app
@@ -24,8 +22,10 @@ ConditionPathExists=/home/app/app.jar
 User=app
 Restart=on-failure
 RestartSec=5s
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 WorkingDirectory=/home/app
-ExecStart=/usr/bin/java -Dclojure.server.repl="{:port 5555 :accept clojure.core.server/repl}" -jar app.jar -m app.main -Duser.timezone=UTC -XX:+UseZGC -XX:InitialRAMPercentage 75.0 -XX:MaxRAMPercentage 75.0 -XX:MinRAMPercentage 75.0 -Djdk.attach.allowAttachSelf
+ExecStart=/usr/bin/java -Dclojure.server.repl="{:port 5555 :accept clojure.core.server/repl}" -jar app.jar -m app.main -Duser.timezone=UTC -XX:+UseZGC -XX:InitialRAMPercentage 75.0 -XX:MaxRAMPercentage 75.0 -XX:MinRAMPercentage 75.0 -XX:+UseCompactObjectHeaders
 
 [Install]
 WantedBy=multi-user.target
@@ -65,22 +65,6 @@ ufw allow 80
 ufw allow 443
 ufw --force enable
 
-# Reverse proxy
-rm /etc/caddy/Caddyfile
-cat > /etc/caddy/Caddyfile << EOD
-example.andersmurphy.com {
-  header -Server
-  reverse_proxy localhost:8080 {
-    lb_try_duration 30s
-    lb_try_interval 1s
-  }
-}
-EOD
-
-# Let's encrypt
-systemctl daemon-reload
-systemctl enable --now caddy
-
 # ssh config
 cat >> /etc/ssh/sshd_config << EOD
 # Setup script changes
@@ -89,4 +73,3 @@ PubkeyAuthentication yes
 AuthorizedKeysFile .ssh/authorized_keys
 EOD
 systemctl restart ssh
-
